# docs/swagger.json
@@ -2,7 +2,7 @@
     "swagger": "2.0",
     "info": {
         "description": "API for managing song information",
-        "title": "Music library API",
+        "title": "Music Library API",
         "contact": {
             "name": "API Support",
             "url": "http://www.example.com/support",
@@ -19,7 +19,7 @@
     "paths": {
         "/info": {
             "post": {
-                "description": "Retrieve song information by group and title",
+                "description": "Add new song information from group and title",
                 "consumes": [
                     "application/json"
                 ],
@@ -29,7 +29,7 @@
                 "tags": [
                     "Songs"
                 ],
-                "summary": "Get song information",
+                "summary": "Add song information",
                 "parameters": [
                     {
                         "description": "Request Body",
@@ -43,7 +43,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Title details successfully retrieved",
+                        "description": "Song details successfully added",
                         "schema": {
                             "$ref": "#/definitions/models.SongDetail"
                         }
@@ -58,7 +58,7 @@
                         }
                     },
                     "404": {
-                        "description": "Title not found",
+                        "description": "Song not found",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -100,14 +100,14 @@
                     },
                     {
                         "type": "string",
-                        "description": "Filter by Title",
+                        "description": "Filter by Song Title",
                         "name": "song",
                         "in": "query"
                     },
                     {
                         "type": "string",
                         "description": "Filter by Release Date (format: DD.MM.YYYY)",
-                        "name": "releaseDate",
+                        "name": "release_date",
                         "in": "query"
                     },
                     {
@@ -193,7 +193,7 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Title ID",
+                        "description": "Song ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -201,7 +201,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Title deleted successfully",
+                        "description": "Song deleted successfully",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -219,7 +219,7 @@
                         }
                     },
                     "404": {
-                        "description": "Title not found",
+                        "description": "Song not found",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -253,13 +253,13 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Title ID",
+                        "description": "Song ID",
                         "name": "id",
                         "in": "path",
                         "required": true
                     },
                     {
-                        "description": "Title Update Information (supports partial updates)",
+                        "description": "Song Update Information (supports partial updates)",
                         "name": "song",
                         "in": "body",
                         "required": true,
@@ -270,7 +270,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Title updated successfully",
+                        "description": "Song updated successfully",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -288,7 +288,7 @@
                         }
                     },
                     "404": {
-                        "description": "Title not found",
+                        "description": "Song not found",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -324,7 +324,7 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Title ID",
+                        "description": "Song ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -346,7 +346,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Title text retrieved successfully",
+                        "description": "Song text retrieved successfully",
                         "schema": {
                             "type": "object",
                             "additionalProperties": true
@@ -362,7 +362,7 @@
                         }
                     },
                     "404": {
-                        "description": "Title or page not found",
+                        "description": "Song or page not found",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
